Added the curve to the footer and Logo

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,9 @@
 		--tag-color: #e7f5ed80;
 		--bodyBg: #fbfbfb;
 		--mainGreen: #0c5221;
+		--footer-color: #0c7b3a;
+		--footer-btnColor: #212121;
+		--inputTextColor: #1c304a85;
 		--text-title: #192434;
 		--foundation-green: #dbf0e4;
 		--foundation-green2: #0b7437;
