--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
 		--boxBorder-color: #e9e9e9;
 		--bodyText: #4b5563;
 		--brown-border: #906b4c;
+		--search-iconColor: #9ca3af;
 		--brown-text: #4e3928;
 		--tag-color: #e7f5ed80;
 		--bodyBg: #fbfbfb;
