--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,9 @@
 		--foundation-green2: #0b7437;
 		--main-Green: #0f9a49;
 		--light-Purple: #f3e8ff;
+		--settingsIconColor: #262828;
+		--settingsClearBarColor: #0d0c22;
+		--settingsClearColor: #5633d1;
 		--login-screen-text-color: #fbfbfb;
 		--title-text-color: #192434;
 		--gray-body-text: #4b5563;
