Still working on the jobs page, jobs card still needs some optimizations

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,7 @@
 		--settingsIconColor: #262828;
 		--settingsClearBarColor: #0d0c22;
 		--settingsClearColor: #5633d1;
+		--checkboxColor: #1c375a29;
 		--login-screen-text-color: #fbfbfb;
 		--title-text-color: #192434;
 		--gray-body-text: #4b5563;
