--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@
 		--commentCardTextColor: #717171;
 		--boxBorder-color: #e9e9e9;
 		--bodyText: #4b5563;
+		--downloadBtnColor: #b5e0c7;
+		--socialsColor: #ececec;
 		--brown-border: #906b4c;
 		--search-iconColor: #9ca3af;
 		--brown-text: #4e3928;
