Added the table component on the shortlisted url

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,9 +19,13 @@
 		--footer-color: #0c7b3a;
 		--footer-btnColor: #212121;
 		--inputTextColor: #1c304a85;
+		--dots-color: #98a2b3;
 		--text-title: #192434;
 		--foundation-green: #dbf0e4;
 		--foundation-green2: #0b7437;
+		--applicant-colorbg: #f9f5ff;
+		--deep-purple: #7f56d9;
+		--applicant-colorText: #6941c6;
 		--main-Green: #0f9a49;
 		--light-Purple: #f3e8ff;
 		--settingsIconColor: #262828;
