--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,11 +4,13 @@
 
 @layer base {
 	:root {
-		--chooseFileIconBgColor: #1b2b41b0;
 		--chooseFileIconBorderColor: #1c375a29;
+		--chooseFileIconBgColor: #1b2b41b0;
 		--commentCardTextColor: #717171;
 		--chooseFileTextColor: #1b2b41b0;
 		--chooseFileBgColor: #193b670d;
+		--filtertTagColor: #6b21a8;
+		--checkboxColor1: #9333ea;
 		--commentsColor: #333333;
 		--boxBorder-color: #e9e9e9;
 		--bodyText: #4b5563;
